--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-image-crop-demo-with-react-hooks",
+  "name": "Crop image",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
